@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.106.24 Kernel Configuration
+# Linux/mips 3.4.107.39 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -1337,7 +1337,6 @@ CONFIG_RT2860V2_AP_RTMP_INTERNAL_TX_ALC=y
 # CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD is not set
 # CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
 CONFIG_RT2860V2_AP_SNMP=y
-# CONFIG_RT2860V2_AP_BRIDGE_FASTPATH is not set
 # CONFIG_RT2860V2_AP_QLOAD is not set
 CONFIG_RT2860V2_AP_INTERFERENCE_REDUCE=y
 # CONFIG_RT2860V2_AP_ATE is not set
