@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.107.37 Kernel Configuration
+# Linux/mips 3.4.107.39 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -1401,7 +1401,6 @@ CONFIG_EXTERNAL_PA_EXTERNAL_LNA=y
 # CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD is not set
 # CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
 CONFIG_RT2860V2_AP_SNMP=y
-# CONFIG_RT2860V2_AP_BRIDGE_FASTPATH is not set
 # CONFIG_RT2860V2_AP_QLOAD is not set
 # CONFIG_RT2860V2_AP_INTERFERENCE_REDUCE is not set
 # CONFIG_RT2860V2_AP_ATE is not set
@@ -1411,6 +1410,7 @@ CONFIG_RT2860V2_AP_SNMP=y
 # Client MODE Ralink APSoC RT3xxx/RT5xxx/MT7620 wireless driver
 #
 # CONFIG_RT2860V2_STA is not set
+# CONFIG_BAND_STEERING is not set
 
 #
 # AP MODE MediaTek MT7602E/MT7612E PCIe Wireless Driver
@@ -1439,6 +1439,7 @@ CONFIG_MT76X2_AP_80211AC_VHT=y
 # CONFIG_MT76X2_AP_IGMP_SNOOP is not set
 # CONFIG_MT76X2_AP_MCAST_RATE_SPECIFIC is not set
 # CONFIG_MT76X2_AP_DELAYED_TCP_ACK is not set
+CONFIG_MT76X2_AP_SNMP=y
 # CONFIG_MT76X2_AP_SINGLE_SKU is not set
 # CONFIG_MT76X2_AP_READ_MAC_FROM_MTD is not set
 # CONFIG_MT76X2_AP_BIG_ENDIAN is not set
