@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.107.37 Kernel Configuration
+# Linux/mips 3.4.107.39 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -1735,7 +1735,6 @@ CONFIG_RT2860V2_AP_RTMP_INTERNAL_TX_ALC=y
 # CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD is not set
 # CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
 CONFIG_RT2860V2_AP_SNMP=y
-# CONFIG_RT2860V2_AP_BRIDGE_FASTPATH is not set
 # CONFIG_RT2860V2_AP_QLOAD is not set
 CONFIG_RT2860V2_AP_INTERFERENCE_REDUCE=y
 # CONFIG_RT2860V2_AP_ATE is not set
@@ -1769,7 +1768,8 @@ CONFIG_MT7610_AP_APCLI=y
 # CONFIG_MT7610_AP_IGMP_SNOOP is not set
 # CONFIG_MT7610_AP_MCAST_RATE_SPECIFIC is not set
 # CONFIG_MT7610_AP_TSSI_COMPENSATION is not set
-# CONFIG_MT7610_AP_TEMPERATURE_COMPENSATION is not set
+CONFIG_MT7610_AP_TEMPERATURE_COMPENSATION=y
+CONFIG_MT7610_AP_SNMP=y
 # CONFIG_MT7610_AP_SINGLE_SKU is not set
 # CONFIG_MT7610_AP_READ_MAC_FROM_MTD is not set
 # CONFIG_MT7610_AP_MC_SUPPORT is not set
