@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.106.24 Kernel Configuration
+# Linux/mips 3.4.107.39 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -935,7 +935,6 @@ CONFIG_PPPOL2TP=y
 CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
 # CONFIG_SLIP is not set
-# CONFIG_TR is not set
 
 #
 # USB Network Adapters
@@ -1762,6 +1761,7 @@ CONFIG_RT_SECOND_CARD_EEPROM="flash"
 # Client MODE Ralink APSoC RT3xxx/RT5xxx/MT7620 wireless driver
 #
 # CONFIG_RT2860V2_STA is not set
+# CONFIG_BAND_STEERING is not set
 
 #
 # AP MODE MediaTek MT7602E/MT7612E PCIe Wireless Driver
@@ -1790,13 +1790,13 @@ CONFIG_MT76X2_AP_80211AC_VHT=y
 # CONFIG_MT76X2_AP_IGMP_SNOOP is not set
 # CONFIG_MT76X2_AP_MCAST_RATE_SPECIFIC is not set
 # CONFIG_MT76X2_AP_DELAYED_TCP_ACK is not set
+CONFIG_MT76X2_AP_SNMP=y
 # CONFIG_MT76X2_AP_SINGLE_SKU is not set
 # CONFIG_MT76X2_AP_READ_MAC_FROM_MTD is not set
 # CONFIG_MT76X2_AP_BIG_ENDIAN is not set
 # CONFIG_MT76X2_AP_MC_SUPPORT is not set
 # CONFIG_MT76X2_AP_ATE is not set
 CONFIG_MT76X2_AP_IAPP=y
-CONFIG_MT76X2_AP_INTERFERENCE_REDUCE=y
 # CONFIG_MT76X2_AP_DBG is not set
 
 #
