@@ -400,6 +400,10 @@ ifeq ($(CONFIG_MT76X2_AP_DELAYED_TCP_ACK),y)
 EXTRA_CFLAGS += -DDELAYED_TCP_ACK
 endif
 
+ifeq ($(CONFIG_BAND_STEERING),y)
+EXTRA_CFLAGS += -DBAND_STEERING
+endif
+
 ifeq ($(CONFIG_MT76X2_AP_EXT_CHANNEL_LIST),y)
 EXTRA_CFLAGS += -DEXT_BUILD_CHANNEL_LIST
 endif
